@@ -329,6 +329,19 @@ require_once __DIR__ . '/common.php';
 \define('_AM_WGGALLERY_MAINTENANCE_EXIF_CURRENT', 'Currently missing exif-data: %c of %t images');
 \define('_AM_WGGALLERY_MAINTENANCE_DELETE_EXIF_SUCCESS', 'Exif-data successfully deleted');
 \define('_AM_WGGALLERY_MAINTENANCE_DELETE_EXIF_ERROR', 'Error when deleting Exif-data');
+\define('_AM_WGGALLERY_MAINTENANCE_CHECK_EXTGD', 'Check whether obligatory gd extension is loaded or not');
+\define('_AM_WGGALLERY_MAINTENANCE_CHECK_EXTGD_LOADED', 'gd extension loaded');
+\define('_AM_WGGALLERY_MAINTENANCE_CHECK_EXTGD_NOTLOADED', 'gd extension is NOT loaded');
+\define('_AM_WGGALLERY_MAINTENANCE_CHECK_EXTGD_INFO1', 'gd extension must be enabled, otherwise some features of this module are NOT working');
+\define('_AM_WGGALLERY_MAINTENANCE_CHECK_EXTGD_INFO2', 'Please enable gd extension, otherwise module is NOT working properly');
+\define('_AM_WGGALLERY_MAINTENANCE_CHECK_EXTEXIF', 'Check whether exif extension is loaded or not');
+\define('_AM_WGGALLERY_MAINTENANCE_CHECK_EXTEXIF_LOADED', 'exif extension loaded');
+\define('_AM_WGGALLERY_MAINTENANCE_CHECK_EXTEXIF_NOTLOADED', 'exif extension is NOT loaded');
+\define('_AM_WGGALLERY_MAINTENANCE_CHECK_EXTEXIF_INFO1', 'exif extension must be enabled, if you want to use read exif features');
+\define('_AM_WGGALLERY_MAINTENANCE_CHECK_EXTEXIF_INFO2', 'Please enable exif extension, otherwise module is NOT working properly');
+\define('_AM_WGGALLERY_MAINTENANCE_CHECK_EXTEXIF_INFO3', 'Save exif is not activated currently. If you want to use this feature you have also to load exif extension');
+\define('_AM_WGGALLERY_MAINTENANCE_CHECK_EXTEXIF_OPTENABLED', 'Save exif is activated in module preferences');
+\define('_AM_WGGALLERY_MAINTENANCE_CHECK_EXTEXIF_OPTDISABLED', 'Save exif is NOT activated in module preferences');
 // Import
 \define('_AM_WGGALLERY_IMPORT', 'Import data and files from other gallery modules');
 \define('_AM_WGGALLERY_IMPORT_LIST', 'List of supported modules');
