@@ -329,6 +329,19 @@ require_once __DIR__ . '/common.php';
 \define('_AM_WGGALLERY_MAINTENANCE_EXIF_CURRENT', 'Derzeit fehlende Exif-Daten: %c von %t Bildern');
 \define('_AM_WGGALLERY_MAINTENANCE_DELETE_EXIF_SUCCESS', 'Exif-Daten erfolgreich gelöscht');
 \define('_AM_WGGALLERY_MAINTENANCE_DELETE_EXIF_ERROR', 'Fehler beim Löschen der Exif-Daten');
+\define('_AM_WGGALLERY_MAINTENANCE_CHECK_EXTGD', 'Überprüfung ob die erforderliche gd Erweiterung geladen ist oder nicht');
+\define('_AM_WGGALLERY_MAINTENANCE_CHECK_EXTGD_LOADED', 'gd Erweiterung geladen');
+\define('_AM_WGGALLERY_MAINTENANCE_CHECK_EXTGD_NOTLOADED', 'gd Erweiterung ist NICHT geladen');
+\define('_AM_WGGALLERY_MAINTENANCE_CHECK_EXTGD_INFO1', 'gd Erweiterung muss verfügbar sein, ansonsten arbeiten einige Funktionen dieses Moduls NICHT');
+\define('_AM_WGGALLERY_MAINTENANCE_CHECK_EXTGD_INFO2', 'Bitte gd Erweiterung aktivieren, ansonsten arbeitet dieses Modul NICHT richtig');
+\define('_AM_WGGALLERY_MAINTENANCE_CHECK_EXTEXIF', 'Überprüfung ob die erforderliche exif Erweiterung geladen ist oder nicht');
+\define('_AM_WGGALLERY_MAINTENANCE_CHECK_EXTEXIF_LOADED', 'exif Erweiterung geladen');
+\define('_AM_WGGALLERY_MAINTENANCE_CHECK_EXTEXIF_NOTLOADED', 'exif Erweiterung ist NICHT geladen');
+\define('_AM_WGGALLERY_MAINTENANCE_CHECK_EXTEXIF_INFO1', 'exif Erweiterung muss verfügbar sein wenn Sie die Funktion Exif-Daten-Lesen verwenden wollen');
+\define('_AM_WGGALLERY_MAINTENANCE_CHECK_EXTEXIF_INFO2', 'Bitte die exif Erweiterung aktivieren, ansonsten arbeitet das Modul nicht richtig');
+\define('_AM_WGGALLERY_MAINTENANCE_CHECK_EXTEXIF_INFO3', 'Speichern der exif-Daten ist derzeit nicht aktiviert. Wenn Sie dieses Feature verwenden wollen müssen Sie die exif-Erweiterung vorher aktivieren');
+\define('_AM_WGGALLERY_MAINTENANCE_CHECK_EXTEXIF_OPTENABLED', 'Speichern der exif-Daten ist in den Moduleinstellungen aktiviert');
+\define('_AM_WGGALLERY_MAINTENANCE_CHECK_EXTEXIF_OPTDISABLED', 'Speichern der exif-Daten ist in den Moduleinstellungen nicht aktiviert');
 // Import
 \define('_AM_WGGALLERY_IMPORT', 'Daten und Dateien aus anderen Galeriemodulen importieren');
 \define('_AM_WGGALLERY_IMPORT_LIST', 'Liste der unterstützten Module');
